# igloo-home

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: check-built-css.mjs  run-desktop-xvfb.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  models.rs  paths.rs  profiles.rs  session.rs  session_log.rs  settings.rs  share_store.rs  test_mode.rs
src-tauri/src/app/: bootstrap.rs  commands.rs  mod.rs  settings.rs  test_api.rs  test_dispatch.rs  tray.rs  window.rs
src-tauri/src/session/: close.rs  controller.rs  lifecycle.rs  resume.rs
src/lib/: api.ts  events.ts  profileIdentity.ts  testBridge.ts  types.ts
src/pages/: CreatePage.tsx  RecoverPage.tsx  SettingsPage.tsx  SharesPage.tsx  SignerPage.tsx
src/test/: visualMode.ts
test/: README.md
test/desktop/: run.mjs
test/frontend/: App.test.tsx  CreatePage.test.tsx  SettingsPage.test.tsx  SharesPage.test.tsx  api.test.ts
test/visual/: run.mjs
